--- a/index.html
+++ b/index.html
@@ -181,14 +181,107 @@
         <img src="assets/Company logo-4.png" alt="">
         <img src="assets/Company logo-5.png" alt="">
     </div>
-    <div class="cont">
-        <button>
-            Services
-        </button>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore debitis repudiandae quibusdam dolorem
-           <br> aspernatur eligendi deserunt, et excepturi quasi molestias laudantium eos accusantium earum voluptates error
-            repellendus facilis corporis libero.</p>
-    </div>
+    <section class="services-section">
+      <div class="services-header">
+        <h2><span>Services</span></h2>
+        <p>
+          At our digital marketing agency, we offer a range of services to help
+          businesses grow and succeed online. These services include:
+        </p>
+      </div>
+
+      <div class="services-cards">
+        <!-- Card 1 -->
+        <div class="service-card light">
+          <h3 class="cardclr">
+            Search engine <br />
+            optimization
+          </h3>
+          <img
+            src="/assets/Illustration.png"
+            alt="SEO Icon"
+          />
+          <a href="#" class="learn-more">
+            <span>Learn more</span>
+            <span class="arrow">↗</span>
+          </a>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="service-card green">
+          <h3 class="crdclr">Pay-per-click advertising</h3>
+          <img
+            src="/assets/Illustration (1).png"
+            alt="PPC Icon"
+          />
+          <a href="#" class="learn-more">
+            <span>Learn more</span>
+            <span class="arrow">↗</span>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section class="accordion-section">
+      <h2>Our Working Process</h2>
+      <p>Step-by-Step Guide to Achieving Your Business Goals</p>
+
+      <div class="accordion">
+        <input type="checkbox" id="acc1" checked />
+        <label for="acc1"><span>01</span> Consultation</label>
+        <div class="accordion-content">
+          During this initial consultation, we will discuss your business goals
+          and objectives, target audience, and current marketing efforts. This
+          will allow us to understand your needs and tailor our services to best
+          suit your requirements.
+        </div>
+      </div>
+
+      <div class="accordion">
+        <input type="checkbox" id="acc2" />
+        <label for="acc2"
+          ><span>02</span> Research and Strategy Development</label
+        >
+        <div class="accordion-content">
+          We conduct detailed research to create a strategic marketing plan
+          tailored to your business goals.
+        </div>
+      </div>
+
+      <div class="accordion">
+        <input type="checkbox" id="acc3" />
+        <label for="acc3"><span>03</span> Implementation</label>
+        <div class="accordion-content">
+          Our team executes the planned strategies across appropriate platforms.
+        </div>
+      </div>
+
+      <div class="accordion">
+        <input type="checkbox" id="acc4" />
+        <label for="acc4"><span>04</span> Monitoring and Optimization</label>
+        <div class="accordion-content">
+          We track performance and make data-driven adjustments to optimize
+          results.
+        </div>
+      </div>
+
+      <div class="accordion">
+        <input type="checkbox" id="acc5" />
+        <label for="acc5"><span>05</span> Reporting and Communication</label>
+        <div class="accordion-content">
+          Regular reports keep you updated on campaign performance and growth.
+        </div>
+      </div>
+
+      <div class="accordion">
+        <input type="checkbox" id="acc6" />
+        <label for="acc6"><span>06</span> Continual Improvement</label>
+        <div class="accordion-content">
+          We continually refine and evolve our strategies to stay aligned with
+          your goals.
+        </div>
+      </div>
+    </section>
 </body>
 
 </html>
